// https://dbdiagram.io/d
// Generated from db/schema.sql

// ─────────────────────────────────────────────
// Auth / platform
// ─────────────────────────────────────────────

Table roles {
  id bigserial [pk]
  name text [not null, unique]
  description text [not null, default: '']
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  handle text [not null, unique, note: 'lowercase, 3-32 chars, [a-z0-9_]']
  email text [not null, unique, note: 'lowercase, 3-320 chars']
  password_hash text [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table jwt_signing_keys {
  id uuid [pk, default: `gen_random_uuid()`]
  token_type text [not null, note: 'access | refresh']
  algorithm text [not null, default: 'HS256']
  secret bytea [not null]
  state text [not null, default: 'active', note: 'active | retired | revoked']
  verify_until timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table user_roles {
  user_id uuid [not null]
  role_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, role_id) [pk]
    role_id [name: 'user_roles_role_id_idx']
  }
}

Table invitations {
  id uuid [pk, default: `gen_random_uuid()`]
  email text [not null, note: 'lowercase, 3-320 chars']
  code text [not null, unique]
  invited_by uuid [not null]
  used_by uuid
  used_at timestamptz
  expires_at timestamptz [not null]
  archived_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    code [name: 'invitations_code_idx']
    email [name: 'invitations_email_idx']
  }
}

Table password_reset_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  code text [not null, unique]
  expires_at timestamptz [not null]
  used_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    code [name: 'password_reset_tokens_code_idx']
    user_id [name: 'password_reset_tokens_user_id_idx']
  }
}

// ─────────────────────────────────────────────
// Game foundation
// ─────────────────────────────────────────────

Table games {
  id bigserial [pk]
  name text [not null]
  status text [not null, default: 'setup', note: 'setup | active | completed']
  current_turn int [not null, default: 0, note: 'CHECK: >= 0']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// ─────────────────────────────────────────────
// Global catalogs (no game scope) — units-model.md
// ─────────────────────────────────────────────

Table vessel_types {
  code text [pk]
  display_name text [not null]
  category text [not null, note: 'ship | colony']
  movement_points int [not null, default: 0]
  cargo_capacity int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Global catalog; alpha codes: scout, transport, surface-colony, enclosed-colony, orbital-colony.'
}

Table units {
  code text [pk]
  display_name text [not null]
  category text [note: 'nullable; UI grouping']
  source text [not null, note: 'mined | farmed | factory']
  created_at timestamptz [not null, default: `now()`]

  Note: 'Global catalog; alpha codes include metals, fuel, gold, non-metals, food, rstu, cngd, mine, farm, factory.'
}

Table unit_recipes {
  unit_code text [not null]
  input_code text [not null]
  quantity int [not null, note: 'CHECK: > 0']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (unit_code, input_code) [pk]
  }

  Note: 'Applies only to Units with source = factory (engine-enforced).'
}

// ─────────────────────────────────────────────
// World — world-model.md
// ─────────────────────────────────────────────

Table star_systems {
  id bigserial [pk]
  game_id bigint [not null]
  x int [not null]
  y int [not null]
  is_home_system boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'star_systems_game_id_key']
    (game_id, x, y) [unique, name: 'star_systems_game_coord_key']
  }
}

Table jump_routes {
  id bigserial [pk]
  game_id bigint [not null]
  system_a_id bigint [not null, note: 'CHECK: system_a_id < system_b_id']
  system_b_id bigint [not null]
  cost int [not null, note: 'CHECK: > 0']
  last_turn_used int [note: 'nullable']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'jump_routes_game_id_key']
    (game_id, system_a_id, system_b_id) [unique, name: 'jump_routes_game_endpoints_key']
  }
}

Table planets {
  id bigserial [pk]
  game_id bigint [not null]
  system_id bigint [not null]
  orbit int [not null, note: 'CHECK: > 0']
  planet_type text [not null, note: "rocky | 'gas giant' | 'asteroid belt'"]
  lsn int [not null, note: 'Life Support Number; CHECK: 0..100']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'planets_game_id_key']
    (game_id, system_id, orbit) [unique, name: 'planets_game_system_orbit_key']
  }
}

Table home_worlds {
  game_id bigint [not null]
  planet_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, planet_id) [pk]
  }
}

Table natural_resources {
  id bigserial [pk]
  game_id bigint [not null]
  planet_id bigint [not null]
  resource_type text [not null, note: 'ore | energy | gold | materials | farmland']
  capacity int [not null, note: 'CHECK: > 0']
  base_extraction int [not null, note: 'gross units per staffed extractor per turn']
  yield_percent int [not null, note: 'CHECK: 1..100']
  reserves bigint [not null, default: 0, note: 'ignored when is_infinite = true']
  is_infinite boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'natural_resources_game_id_key']
  }
}

// ─────────────────────────────────────────────
// Empire layer — empire-model.md
// ─────────────────────────────────────────────

Table agents {
  id bigserial [pk]
  name text [not null, note: 'UNIQUE (lower(name)) — case-insensitive global']
  version text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Global (no game_id); rows immutable once created — new versions add new rows.'
}

Table races {
  id bigserial [pk]
  game_id bigint [not null]
  home_planet_id bigint [not null]
  name text [not null, note: 'UNIQUE (game_id, lower(name)) — case-insensitive per-game']
  temperature_class int [not null, note: '1..30, snapshotted from home planet at seeding']
  pressure_class int [not null, note: '0..29, snapshotted from home planet at seeding']
  gas "int[]" [not null, note: 'length 4; snapshotted from home planet at seeding']
  gas_percent "int[]" [not null, note: 'length 4; snapshotted from home planet at seeding']
  required_gas int [not null]
  required_gas_min int [not null]
  required_gas_max int [not null]
  neutral_gas "int[]" [not null, note: 'length 6']
  poison_gas "int[]" [not null, note: 'length 6']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'races_game_id_key']
    (game_id, home_planet_id) [unique, name: 'races_game_home_planet_key']
  }

  Note: 'Immutable after creation (except name). Home-planet snapshot fields must not be mutated by terraforming; they are the LSN baseline.'
}

Table empires {
  id bigserial [pk]
  game_id bigint [not null]
  race_id bigint [not null]
  name text [not null, note: 'UNIQUE (game_id, lower(name)) — case-insensitive per-game']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'empires_game_id_key']
  }
}

Table players {
  id bigserial [pk]
  game_id bigint [not null]
  account_id uuid [not null, note: 'FK to users.id']
  is_gm boolean [not null, default: false]
  status text [not null, default: 'active', note: 'active | resigned | eliminated']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'players_game_id_key']
    (game_id, account_id) [unique, name: 'players_game_account_key']
  }
}

Table empire_control {
  empire_id bigint [pk]
  game_id bigint [not null]
  player_id bigint [note: 'nullable; UNIQUE WHERE NOT NULL']
  agent_id bigint [note: 'nullable']
  gm_set boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'CHECK: agent_id IS NULL => gm_set = false.'
}

// ─────────────────────────────────────────────
// Per-empire world views
// ─────────────────────────────────────────────

Table empire_system_names {
  game_id bigint [not null]
  empire_id bigint [not null]
  system_id bigint [not null]
  name text [not null, note: 'UNIQUE (empire_id, lower(name))']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (empire_id, system_id) [pk]
  }
}

Table empire_planet_names {
  game_id bigint [not null]
  empire_id bigint [not null]
  planet_id bigint [not null]
  name text [not null, note: 'UNIQUE (empire_id, lower(name))']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (empire_id, planet_id) [pk]
  }
}

Table empire_jump_point_knowledge {
  game_id bigint [not null]
  empire_id bigint [not null]
  route_id bigint [not null]
  system_id bigint [not null]
  detected boolean [not null, default: false]
  range_band text [note: 'nullable']
  destination_known boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (empire_id, route_id, system_id) [pk]
  }
}

// ─────────────────────────────────────────────
// Vessels and inventory — empire-model.md
// ─────────────────────────────────────────────

Table vessels {
  id bigserial [pk]
  game_id bigint [not null]
  empire_id bigint [not null]
  vessel_type_code text [not null]
  name text [not null, note: 'UNIQUE (game_id, empire_id, lower(name))']
  status text [not null, default: 'active', note: 'active | abandoned | destroyed']
  tech_level int [not null, note: 'CHECK: 0..10']
  planet_id bigint [note: 'nullable']
  system_id bigint [note: 'nullable']
  docked_at_vessel_id bigint [note: 'nullable; self-reference']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'vessels_game_id_key']
  }

  Note: 'CHECK: exactly one of planet_id, system_id, docked_at_vessel_id is non-null.'
}

Table vessel_inventory {
  game_id bigint [not null]
  vessel_id bigint [not null]
  unit_code text [not null]
  tech_level int [not null, note: 'CHECK: 0..10']
  quantity int [not null, default: 0, note: 'CHECK: >= 0']
  active int [not null, default: 0, note: 'CHECK: 0..quantity']
  cargo int [not null, default: 0]
  mass int [not null, default: 0]
  volume int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, vessel_id, unit_code, tech_level) [pk]
  }
}

// ─────────────────────────────────────────────
// Empire instance entities keyed on vessel
// ─────────────────────────────────────────────

Table population_groups {
  game_id bigint [not null]
  vessel_id bigint [not null]
  group_type text [not null, note: 'untrained | worker | manager | soldier | pilot']
  count int [not null, default: 0, note: 'CHECK: >= 0']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, vessel_id, group_type) [pk]
  }
}

Table training_queue {
  id bigserial [pk]
  game_id bigint [not null]
  vessel_id bigint [not null]
  from_group_type text [not null, note: 'untrained | worker | manager | soldier | pilot']
  to_group_type text [not null, note: 'untrained | worker | manager | soldier | pilot']
  count int [not null, note: 'CHECK: > 0']
  start_turn int [not null]
  completion_turn int [not null, note: 'CHECK: >= start_turn']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, id) [unique, name: 'training_queue_game_id_key']
  }

  Note: 'Training occurs only at Vessels of a colony type (engine-enforced).'
}

Table mining_groups {
  game_id bigint [not null]
  vessel_id bigint [not null]
  resource_id bigint [not null]
  group_no int [not null]
  unit_code text [not null]
  tech_level int [not null, note: 'CHECK: 0..10']
  quantity int [not null, note: 'CHECK: > 0']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, vessel_id, resource_id, group_no, unit_code, tech_level) [pk]
  }

  Note: 'Composite FK (game_id, vessel_id, unit_code, tech_level) to vessel_inventory. See extractor-restrictions.md for the structural invariant.'
}

Table farming_groups {
  game_id bigint [not null]
  vessel_id bigint [not null]
  resource_id bigint [not null]
  group_no int [not null]
  unit_code text [not null]
  tech_level int [not null, note: 'CHECK: 0..10']
  quantity int [not null, note: 'CHECK: > 0']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, vessel_id, resource_id, group_no, unit_code, tech_level) [pk]
  }

  Note: 'Composite FK (game_id, vessel_id, unit_code, tech_level) to vessel_inventory.'
}

Table factory_groups {
  game_id bigint [not null]
  vessel_id bigint [not null]
  group_no int [not null]
  unit_code text [not null]
  tech_level int [not null, note: 'CHECK: 0..10']
  quantity int [not null, note: 'CHECK: > 0']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (game_id, vessel_id, group_no, unit_code, tech_level) [pk]
  }

  Note: 'Composite FK (game_id, vessel_id, unit_code, tech_level) to vessel_inventory.'
}

// ─────────────────────────────────────────────
// Relationships — auth / platform
// ─────────────────────────────────────────────

Ref: user_roles.user_id > users.id [delete: cascade]
Ref: user_roles.role_id > roles.id [delete: cascade]
Ref: invitations.invited_by > users.id [delete: cascade]
Ref: invitations.used_by > users.id [delete: set null]
Ref: password_reset_tokens.user_id > users.id [delete: cascade]

// ─────────────────────────────────────────────
// Relationships — game domain
// Composite FKs carry game_id per A1 (prevent cross-game references).
// ─────────────────────────────────────────────

Ref: unit_recipes.unit_code > units.code [delete: cascade]
Ref: unit_recipes.input_code > units.code [delete: restrict]

Ref: star_systems.game_id > games.id [delete: cascade]
Ref: jump_routes.(game_id, system_a_id) > star_systems.(game_id, id) [delete: cascade]
Ref: jump_routes.(game_id, system_b_id) > star_systems.(game_id, id) [delete: cascade]
Ref: planets.(game_id, system_id) > star_systems.(game_id, id) [delete: cascade]
Ref: home_worlds.(game_id, planet_id) > planets.(game_id, id) [delete: cascade]
Ref: natural_resources.(game_id, planet_id) > planets.(game_id, id) [delete: cascade]

Ref: races.game_id > games.id [delete: cascade]
Ref: races.(game_id, home_planet_id) > planets.(game_id, id) [delete: cascade]

Ref: empires.game_id > games.id [delete: cascade]
Ref: empires.(game_id, race_id) > races.(game_id, id) [delete: cascade]
Ref: players.game_id > games.id [delete: cascade]
Ref: players.account_id > users.id [delete: restrict]

Ref: empire_control.(game_id, empire_id) > empires.(game_id, id) [delete: cascade]
Ref: empire_control.(game_id, player_id) > players.(game_id, id) [delete: set null]
Ref: empire_control.agent_id > agents.id [delete: set null]

Ref: empire_system_names.(game_id, empire_id) > empires.(game_id, id) [delete: cascade]
Ref: empire_system_names.(game_id, system_id) > star_systems.(game_id, id) [delete: cascade]
Ref: empire_planet_names.(game_id, empire_id) > empires.(game_id, id) [delete: cascade]
Ref: empire_planet_names.(game_id, planet_id) > planets.(game_id, id) [delete: cascade]
Ref: empire_jump_point_knowledge.(game_id, empire_id) > empires.(game_id, id) [delete: cascade]
Ref: empire_jump_point_knowledge.(game_id, route_id) > jump_routes.(game_id, id) [delete: cascade]
Ref: empire_jump_point_knowledge.(game_id, system_id) > star_systems.(game_id, id) [delete: cascade]

Ref: vessels.(game_id, empire_id) > empires.(game_id, id) [delete: cascade]
Ref: vessels.vessel_type_code > vessel_types.code [delete: restrict]
Ref: vessels.(game_id, planet_id) > planets.(game_id, id) [delete: restrict]
Ref: vessels.(game_id, system_id) > star_systems.(game_id, id) [delete: restrict]
Ref: vessels.(game_id, docked_at_vessel_id) > vessels.(game_id, id) [delete: restrict]

Ref: vessel_inventory.(game_id, vessel_id) > vessels.(game_id, id) [delete: cascade]
Ref: vessel_inventory.unit_code > units.code [delete: restrict]

Ref: population_groups.(game_id, vessel_id) > vessels.(game_id, id) [delete: cascade]
Ref: training_queue.(game_id, vessel_id) > vessels.(game_id, id) [delete: cascade]

Ref: mining_groups.(game_id, vessel_id) > vessels.(game_id, id) [delete: cascade]
Ref: mining_groups.(game_id, resource_id) > natural_resources.(game_id, id) [delete: cascade]
Ref: mining_groups.unit_code > units.code [delete: restrict]
Ref: mining_groups.(game_id, vessel_id, unit_code, tech_level) > vessel_inventory.(game_id, vessel_id, unit_code, tech_level) [delete: cascade]

Ref: farming_groups.(game_id, vessel_id) > vessels.(game_id, id) [delete: cascade]
Ref: farming_groups.(game_id, resource_id) > natural_resources.(game_id, id) [delete: cascade]
Ref: farming_groups.unit_code > units.code [delete: restrict]
Ref: farming_groups.(game_id, vessel_id, unit_code, tech_level) > vessel_inventory.(game_id, vessel_id, unit_code, tech_level) [delete: cascade]

Ref: factory_groups.(game_id, vessel_id) > vessels.(game_id, id) [delete: cascade]
Ref: factory_groups.unit_code > units.code [delete: restrict]
Ref: factory_groups.(game_id, vessel_id, unit_code, tech_level) > vessel_inventory.(game_id, vessel_id, unit_code, tech_level) [delete: cascade]
